Fix detail view on small screens

--- a/web/static/css/application.sass
+++ b/web/static/css/application.sass
@@ -93,9 +93,7 @@ body
 .is-first
   margin-top: 30px
 .detail-view
-  margin-top: 0px
-  @media(min-width: $sm-breakpoint)
-    margin-top: 30px
+  margin-top: $space-between-header-and-content + 5px
 .tile-list
   display: flex
   flex-direction: column
